kubernetes/apps/auth/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authentik-outpost
spec:
  from:
    # Allows SecurityPolicy resources from associated namespaces to reference the authentik outpost service
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: budget
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: downloads
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: echo
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: hajimari
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: home-automation
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: longhorn-system
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: media
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: network
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: storage
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: transcode
      # Add more namespaces here as you protect more apps
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
